samples/_failures_safe/1761641267_7f62fc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6c37cca8.c: In function ‘main’:
./samples/SAFE/__tmp_6c37cca8.c:156:17: error: expected ‘)’ at end of input
  156 |                i
      |                 ^
      |                 )
./samples/SAFE/__tmp_6c37cca8.c:155:15: note: to match this ‘(’
  155 |         printf("Processing event %zu: type=%d, data=%s\n",
      |               ^
./samples/SAFE/__tmp_6c37cca8.c:156:16: error: expected declaration or statement at end of input
  156 |                i
      |                ^
./samples/SAFE/__tmp_6c37cca8.c:156:16: error: expected declaration or statement at end of input
